restructuring and fixes

--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -1,3 +1,4 @@
+<!-- Contact Page -->
 <div class="contact" [ngClass]="{'mobile':isMobile}" >
     <div class="background-container">
         <div class="first-bg"></div>
