--- a/src/app/pages/portfolio/portfolio.component.html
+++ b/src/app/pages/portfolio/portfolio.component.html
@@ -1,3 +1,4 @@
+<!-- Portfolio Page -->
 <div class="container portfolio" [ngClass]="{'mobile':isMobile}">
     <app-overview [pageTitle]="'Latest Portfolio'"
         [pageOverviewText]="'Consulting is a long-term investment in your goal’s future.'"></app-overview>
