--- a/src/app/shared/contact-form/contact-form.component.html
+++ b/src/app/shared/contact-form/contact-form.component.html
@@ -1,3 +1,4 @@
+<!-- Contact Form Section With error handling and submit button -->
 <div class="contact-form container"  [ngClass]="{'mobile':isMobile}" >
     <div class="send-message-section">
         <h2 [@slideInFromRight]>Send us a message</h2>
