--- a/src/app/shared/heights-slider/heights-slider.component.html
+++ b/src/app/shared/heights-slider/heights-slider.component.html
@@ -1,3 +1,4 @@
+<!-- Heights Slider section  -->
 <div class="heights-slider "  [ngClass]="{'mobile':isMobile}" >
     <!-- [@enterFromBottom] -->
     <owl-carousel-o [options]="customOptions">
