--- a/src/app/shared/main-poster/main-poster.component.html
+++ b/src/app/shared/main-poster/main-poster.component.html
@@ -1,3 +1,4 @@
+<!-- Main Poster section  -->
 <div class="main-poster" [ngClass]="{'mobile-poster':isMobile}">
     <app-navbar [isHome]="true" *ngIf="!isMobile"></app-navbar>
     <app-mobile-navbar [isHome]="true" *ngIf="isMobile"></app-mobile-navbar>
