--- a/src/app/shared/mission-slider/mission-slider.component.html
+++ b/src/app/shared/mission-slider/mission-slider.component.html
@@ -1,3 +1,4 @@
+<!-- Mission Slider section  -->
 <div  class="mission-card" [ngClass]="{'mobile':isMobile}" >
     <!-- [@fadeInFromTop2] -->
     <owl-carousel-o class="container" [options]="customOptions">
