--- a/src/app/shared/mobile-navbar/mobile-navbar.component.html
+++ b/src/app/shared/mobile-navbar/mobile-navbar.component.html
@@ -1,3 +1,4 @@
+<!-- Mobile Navigation menu section opens for mobile exclusively from the right side  -->
 <nav class="mobile-nav row" [ngClass]="{'contact-navbar': isContact , 'poster-navbar': isHome}">
     <div class="col-3">
 
