--- a/src/app/shared/new-business-heights/new-business-heights.component.html
+++ b/src/app/shared/new-business-heights/new-business-heights.component.html
@@ -1,3 +1,4 @@
+<!-- New business heights section  -->
 <div class="new-business-heights container" [ngClass]="{'mobile':isMobile}" >
     <div class="box">
         <span class="breadcrumb" [@slideLeftToRight]>MILAYA CAPITAL</span>
