--- a/src/app/shared/overview/overview.component.html
+++ b/src/app/shared/overview/overview.component.html
@@ -1,3 +1,4 @@
+<!-- Overview section  -->
 <div [ngClass]=" light == 'yes' ? 'light overview' : 'overview'"> 
 
     <div class="h-overview" [ngClass]="{'mobile': isMobile}">
