--- a/src/app/shared/portfolio-card/portfolio-card.component.html
+++ b/src/app/shared/portfolio-card/portfolio-card.component.html
@@ -1,3 +1,5 @@
+<!-- Portfolio Card section  -->
+<!-- Works for both left and right positioned images -->
 <div class="portfolio-card left-card" *ngIf="imageWay == 'left'" [@slideFromLeft]  (click)="navigateToDetailsPage(1)"   [ngClass]="{'mobile':isMobile}" >
     <div class="left">
         <div class="image-side">
