--- a/src/app/shared/portfolio-slider/portfolio-slider.component.html
+++ b/src/app/shared/portfolio-slider/portfolio-slider.component.html
@@ -1,19 +1,12 @@
-<div class="portfolio-slider" [@fadeInFromTop1]  [ngClass]="{'mobile':isMobile}" >
-    <owl-carousel-o class="container" [options]="customOptions">
-        <ng-container *ngFor="let slide of slides; let i = index;">
-            <ng-template carouselSlide>
-                <div class="portfolio-card">
-                    <div class="portfolio-card-image">
-                        <img alt="portfolio" [src]="slide.img">
-                    </div>
-                    <p class="portfolio-card-title">
-                        {{slide.title}}
-                    </p>
-                    <p class="portfolio-card-desc">
-                        {{slide.descr}}
-                    <p>
-                </div>
-            </ng-template>
-        </ng-container>
-    </owl-carousel-o>
-</div>
+<ngx-slick-carousel class="carousel" #slickModal="slick-carousel" [config]="slideConfig" (init)="slickInit($event)"
+  (breakpoint)="breakpoint($event)" (afterChange)="afterChange($event)" (beforeChange)="beforeChange($event)">
+  <div ngxSlickItem *ngFor="let slide of slides" class="slide">
+    <img src="https://picsum.photos/536/354?{{slide}}" alt="" width="100%">
+  </div>
+</ngx-slick-carousel>
+
+
+<button (click)="addSlide()">Add</button>
+<button (click)="removeSlide()">Remove</button>
+<button (click)="slickModal.slickGoTo(2)">slickGoto 2</button>
+<button (click)="slickModal.unslick()">unslick</button>
