--- a/src/app/shared/we-are-card/we-are-card.component.html
+++ b/src/app/shared/we-are-card/we-are-card.component.html
@@ -1,3 +1,4 @@
+<!-- We are card Component section  -->
 <div class="container weare"  [ngClass]="{'mobile':isMobile}" >
     <div class="img-div">
         <img class="imgweare" alt="weare" src="../../../assets/we-are-img.svg" [@enterFromLeft] >
