--- a/src/app/shared/we-are-home/we-are-home.component.html
+++ b/src/app/shared/we-are-home/we-are-home.component.html
@@ -1,3 +1,4 @@
+<!-- We are home section  -->
 <div class="we-are-home container"  [ngClass]="{'mobile':isMobile}" >
     <div class="container we-are-left-div">
         <span class="box-title">
