--- a/src/app/shared/what-we-do-card/what-we-do-card.component.html
+++ b/src/app/shared/what-we-do-card/what-we-do-card.component.html
@@ -1,3 +1,4 @@
+<!-- What we do card section  -->
 <div class="what-we-do-card" [ngClass]="{'left-align': alignment == 'left','mobile':isMobile}"   >
     <div>
         <h2 class="what-we-do-title">{{title}}</h2>
