--- a/src/app/shared/why-choose-card/why-choose-card.component.html
+++ b/src/app/shared/why-choose-card/why-choose-card.component.html
@@ -1,3 +1,4 @@
+<!-- Why choose card section  -->
 <div class="why-choose-card"  [ngClass]="{'mobile':isMobile}">
     <div class="card-choose"> 
         <div class="row">
