--- a/src/variables.scss
+++ b/src/variables.scss
@@ -182,6 +182,7 @@ $overview-color-contact: #FFFFFF59;
 $contact-det-font: #35353580;
 $desciption-color:rgba(255, 255, 255, 0.50);
 $map-icon:#868210;
+$portfolio-bg-card:#eeeeee;
 //end milaya
 
 $text: #54565a;
