--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -34,21 +34,22 @@
 
     .third-bg{
         position: relative;
-        background: url(../../../assets/footer-bg.png) center / cover repeat-y;
+        // background: url(../../../assets/footer-bg.png) center / cover repeat-y;
+        
     }
 
 
-    // .third-bg::before{
-    //     content: "";
-    //     position: absolute;
-    //     top: 0;
-    //     left: 0;
-    //     width: 100%;
-    //     height: 95%;
-    //     background: url(../../../assets/footer-bg.png) center / cover repeat-y;
-    //     z-index: 0;
-    //     transform: rotate(180deg);
-    // }
+    .third-bg::before{
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 95%;
+        background: url(../../../assets/footer-bg.png) center / cover repeat-y;
+        z-index: 0;
+        transform: rotate(180deg);
+    }
 
     app-we-are-home {
         display: flex;
@@ -120,6 +121,13 @@
         }
     }
 
+    .third-bg {
+        position: relative;
+        background: url(../../../assets/footer-bg.png) center / cover repeat-y;
+    }
+    .third-bg::before {
+        content: none;
+    }
     .second-bg {
         position: relative;
         h1.grey {
@@ -143,3 +151,12 @@
     }
 
 }
+
+
+.animated-element {
+    /* Define initial styles */
+    // opacity: 0;
+    // transform: translateY(-50px);
+    // /* Define transition for smoother animation */
+    // transition: opacity 0.5s, transform 0.5s;
+  }
