--- a/src/app/pages/portfolio-details/portfolio-details.component.html
+++ b/src/app/pages/portfolio-details/portfolio-details.component.html
@@ -1,3 +1,4 @@
+<!-- Portfolio Details Page Opens when user clicks on any portfolio card tile to go to details  -->
 <app-overview [pageTitle]="'Portfolio Details'"  [pageOverviewText]="'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Utex   ex ea commodo consequat.'"></app-overview>
 <div class="spacer-div"></div>
 
@@ -5,7 +6,7 @@
 <app-portfolio-detail-card></app-portfolio-detail-card>
 <div class="spacer-div"></div>
 
-<app-portfolio-slider></app-portfolio-slider>
+<app-portfolio-page-slider></app-portfolio-page-slider>
 <div class="spacer-div" *ngIf="!isMobile"></div>
 
 
