--- a/src/app/shared/counter-card/counter-card.component.html
+++ b/src/app/shared/counter-card/counter-card.component.html
@@ -1,3 +1,4 @@
+<!-- Counter Card section  -->
 <div class="counter-card" [ngClass]="{'mobile':isMobile}" >
     <div>
         <h1 class="col-counter-num">536+</h1>
