--- a/src/app/shared/main-poster/main-poster.component.scss
+++ b/src/app/shared/main-poster/main-poster.component.scss
@@ -1,14 +1,6 @@
 @import '../../../variables';
 
-// .main-poster{
-//     background-image: url('../../../assets/main-poster.svg');
-//     text-align: center;
-//     border-radius: 40px;
-//     position: relative;
-//     z-index: 0;
-// }
-
-.main-poster::after{
+.main-poster::after {
     content: "";
     background-color: $bg-layer;
     position: absolute;
@@ -30,7 +22,7 @@
     background-repeat: no-repeat;
     position: relative;
     z-index: 0;
-    
+
 
     @media screen and (max-width: 1000px) {
         padding: 20px;
@@ -101,25 +93,11 @@
 
 }
 
-.main-poster::after{
-    // content: "";
-    // background-color: $bg-layer;
-    // position: absolute;
-    // top: 0;
-    // left: 0;
-    // width: 100%;
-    // height: 100%;
-    // z-index: -2;
-    // border-radius: 40px;
-}
 
-
-.mobile-poster {
-    // width: 100%;
-    // background-position: 30% top;
-    // background-size: inherit;
-    // margin: 0px;
-    // border-radius: 0px !important;
+.mobile-poster.main-poster {
+    background: none;
+    background-image: url('../../../assets/main-poster-mobile.svg') !important;
+    border-radius: 0px ;
 
     .main-desc {
         font-weight: 700;
@@ -127,15 +105,21 @@
         line-height: 30px;
         margin: 100px 0px 0px 0px;
     }
+
     .desc {
         color: $white-grey;
         font-size: $p-desc-port;
-        margin:30px 0px 30px 0px;
+        margin: 30px 0px 30px 0px;
         line-height: 16px;
         font-weight: 600;
-
     }
-    .layer{
+
+    .layer {
         border-radius: 0px;
     }
+}
+
+
+.main-poster.mobile-poster::after {
+    border-radius: 0px ;
 }
