--- a/src/app/shared/mission-card/mission-card.component.html
+++ b/src/app/shared/mission-card/mission-card.component.html
@@ -1,3 +1,4 @@
+<!-- Mission Card section  -->
 <div class="mission-slider-card container" [ngClass]="{'mobile':isMobile}" >
     <app-mission-slider></app-mission-slider>
 </div>
