--- a/src/app/shared/what-we-do-card-2/what-we-do-card-2.component.html
+++ b/src/app/shared/what-we-do-card-2/what-we-do-card-2.component.html
@@ -1,3 +1,4 @@
+<!-- What we do card 2 section  -->
 <div class="what-we-do-card2" [ngClass]="{'left-align': alignment == 'left','mobile':isMobile}"   >
     <div>
         <h2 class="what-we-do-title">{{title}}</h2>
