--- a/src/app/shared/why-choose/why-choose.component.html
+++ b/src/app/shared/why-choose/why-choose.component.html
@@ -1,3 +1,4 @@
+<!-- Why choose section  -->
 <div class="why-choose container" [ngClass]="{'mobile':isMobile}">
     <div class="upper-box">
         <div class="box">
