--- a/src/app/pages/about/about.component.scss
+++ b/src/app/pages/about/about.component.scss
@@ -19,7 +19,7 @@
 
     .we-are-cards {
         display: flex;
-        height: 100vh;
+        height: max-content;
 
         .card1 {
             flex: 1;
