--- a/src/app/shared/contact-map/contact-map.component.html
+++ b/src/app/shared/contact-map/contact-map.component.html
@@ -1,5 +1,5 @@
 <!-- Contact Map section using leaflet library  -->
-<div id="map" [@fadeInFromTop]  [ngClass]="{'mobile':isMobile}" >
+<div id="map" [@enterFromTop]="animationStates.enterFromTop"  [ngClass]="{'mobile':isMobile}" >
 
 </div>
 
