--- a/src/app/shared/counter-card/counter-card.component.html
+++ b/src/app/shared/counter-card/counter-card.component.html
@@ -1,10 +1,10 @@
 <!-- Counter Card section  -->
 <div class="counter-card" [ngClass]="{'mobile':isMobile}" >
     <div>
-        <h1 class="col-counter-num">536+</h1>
+        <h1 class="col-counter-num">{{number}}</h1>
     </div>
 
     <div>
-        <p class="col-counter-desc"> Clients & Partnerts Trusted </p>
+        <p class="col-counter-desc"> {{text}} </p>
     </div>
 </div>
