--- a/src/app/shared/we-are-card/we-are-card.component.html
+++ b/src/app/shared/we-are-card/we-are-card.component.html
@@ -1,7 +1,7 @@
 <!-- We are card Component section  -->
 <div class="container weare"  [ngClass]="{'mobile':isMobile}" >
     <div class="img-div">
-        <img class="imgweare" alt="weare" src="../../../assets/we-are-img.svg" [@enterFromLeft] >
+        <img class="imgweare" alt="weare" src="../../../assets/we-are-img.svg" [@enterFromLeft0] >
     </div>
     <div class=" details-div">
         <div class="tit-div">
