--- a/src/app/shared/we-are-home/we-are-home.component.html
+++ b/src/app/shared/we-are-home/we-are-home.component.html
@@ -1,6 +1,6 @@
 <!-- We are home section  -->
 <div class="we-are-home container"  [ngClass]="{'mobile':isMobile}" >
-    <div class="container we-are-left-div">
+    <div class="we-are-left-div">
         <span class="box-title">
             <h3 [@fadeInFromLeft]>Our Work </h3>
             <i class="bi bi-arrow-up-right" [@fadeInFromTop]></i>
