--- a/src/app/shared/what-we-do-card-2/what-we-do-card-2.component.html
+++ b/src/app/shared/what-we-do-card-2/what-we-do-card-2.component.html
@@ -1,5 +1,5 @@
 <!-- What we do card 2 section  -->
-<div class="what-we-do-card2" [ngClass]="{'left-align': alignment == 'left','mobile':isMobile}"   >
+<div class="what-we-do-card2" [ngClass]="{'left-align': alignment == 'left','mobile':isMobile , 'top-align': alignment == 'top'}"   >
     <div>
         <h2 class="what-we-do-title">{{title}}</h2>
         <p class="what-we-do-desc small">{{description}} </p>
