--- a/src/app/shared/why-choose/why-choose.component.html
+++ b/src/app/shared/why-choose/why-choose.component.html
@@ -2,11 +2,11 @@
 <div class="why-choose container" [ngClass]="{'mobile':isMobile}">
     <div class="upper-box">
         <div class="box">
-            <span class="breadcrumb" [@fadeInFromLeft]>WHY CHOOSE MILAYA CAPITAL’S</span>
+            <span class="breadcrumb" [@enterFromLeft]="animationStates.enterFromLeft" >WHY CHOOSE MILAYA CAPITAL’S</span>
 
         </div>
         <div class="box">
-            <h1 class="black" [@fadeInFromTop1]> Connecting businesses, ideas, and people for greater impact.</h1>
+            <h1 class="black" [@enterFromTop1]="animationStates.enterFromTop1"> Connecting businesses, ideas, and people for greater impact.</h1>
         </div>
 
         <div class="spacer-div" *ngIf="!isMobile"></div>
@@ -14,10 +14,10 @@
     <div class="spacer-div" *ngIf="!isMobile"></div>
     <div class="lower-box container ">
         <div class="arrow-div">
-            <img [@fadeInFromTop2] class="long-arrow" src="../../../assets/long-arrow-right.svg" alt="arrow" />
+            <img  [@enterFromTop2]="animationStates.enterFromTop2" class="long-arrow" src="../../../assets/long-arrow-right.svg" alt="arrow" />
         </div>
         <div class="text-div">
-            <h2 class="grey-p-small" [@fadeInFromTop3]>We keep you in interaction with many international corporate
+            <h2 class="grey-p-small"  [@enterFromTop3]="animationStates.enterFromTop3">We keep you in interaction with many international corporate
                 companies. In this
                 way,
                 communication
@@ -26,16 +26,14 @@
     </div>
 
 
-
-
     <div class="spacer-div" *ngIf="!isMobile"></div>
     <div class="why-choose-cards-div">
-        <app-why-choose-card [@fadeInFromBottom1] [src]="'../../../assets/status-up.svg'" [title]="'Smart Solutions'"
+        <app-why-choose-card  [@enterFromBottom1]="animationStates.enterFromBottom1" [src]="'../../../assets/status-up.svg'" [title]="'Smart Solutions'"
             [description]="'All the innovations brought by technology will be with you in your work'"></app-why-choose-card>
-        <app-why-choose-card [@fadeInFromBottom2] [src]="'../../../assets/chart-line-up.svg'"
+        <app-why-choose-card  [@enterFromBottom2]="animationStates.enterFromBottom2" [src]="'../../../assets/chart-line-up.svg'"
             [title]="'High Conversions'"
             [description]="'We will support you to get the best conversions from your investments'"></app-why-choose-card>
-        <app-why-choose-card [@fadeInFromBottom3] [src]="'../../../assets/status-up.svg'" [title]="'High Conversions'"
+        <app-why-choose-card  [@enterFromBottom3]="animationStates.enterFromBottom3" [src]="'../../../assets/status-up.svg'" [title]="'High Conversions'"
             [description]="'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.'"></app-why-choose-card>
     </div>
 
