--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -8,24 +8,24 @@
     <div class="spacer-div"></div>
 
     <div class="we-are-cards container">
-        <div [@fadeInFromTop1] class="card1">
+        <div [@enterFromTop1]="animationStates.enterFromTop1"  class="card1">
             <app-we-are-img-text-card [WeAreTitleCard]="'WE ARE DYNAMIC'"
                 [WeAreDescriptionCard]="'Being a dynamic, DUBAI based, venture capital business, Milaya Capital owns a portfolio of exciting brands that prosper in the local retail and property industries. Even though relatively young, Milaya Capital’s growth across different sectors has been exponential.'"></app-we-are-img-text-card>
         </div>
-        <div [@fadeInFromTop2] class="card2">
+        <div [@enterFromTop2]="animationStates.enterFromTop2" class="card2">
             <app-we-are-img-text-card [WeAreTitleCard]="'OUR VISION'"
                 [WeAreDescriptionCard]="'Milaya Capital’s vision is to create a better tomorrow for the generations to come. A world where we can live in, a sustainable future hence we pay all our efforts in being environmentally sustainable throughout our company’s operations.'"></app-we-are-img-text-card>
         </div>
     </div>
     <div>
         <div class="spacer-div"></div>
-        <div class="counter-cards row container" [@fadeInFromTop]>
-            <app-counter-card class="col counter-border"></app-counter-card>
-            <app-counter-card class="col counter-border"></app-counter-card>
-            <app-counter-card class="col"></app-counter-card>
+        <div class="counter-cards row container"  [@enterFromTop]="animationStates.enterFromTop">
+            <app-counter-card class="col counter-border" [number]="'250+'" [text]="'Clients & Partners Trusted'"></app-counter-card>
+            <app-counter-card class="col counter-border" [number]="'250'" [text]="'Awards & Winning Accquired'"></app-counter-card>
+            <app-counter-card class="col"  [number]="'250+'" [text]="'Projects Completed on 24 Countries'"></app-counter-card>
         </div>
         <div class="spacer-div"></div>
-        <div class="divider" [@fadeInFromTop]></div>
+        <div class="divider"  [@enterFromTop]="animationStates.enterFromTop"></div>
     </div>
     <div class="spacer-div"></div>
 
