--- a/src/app/pages/mission/mission.component.scss
+++ b/src/app/pages/mission/mission.component.scss
@@ -6,11 +6,11 @@
 .mission::before {
     content: "";
     position: absolute;
-    top: -10%;
+    top: -5%;
     left: 0;
     width: 100%;
-    height: 100%;
-    background: url(../../../assets/world.svg) center / cover repeat-y; 
+    height: 120%;
+    background: url(../../../assets/world.svg) center / contain repeat-y; 
     z-index: -1; 
-    opacity: 0.4; 
+    opacity: 1; 
   }
