--- a/src/app/pages/portfolio/portfolio.component.html
+++ b/src/app/pages/portfolio/portfolio.component.html
@@ -3,13 +3,36 @@
     <app-overview [pageTitle]="'Latest Portfolio'"
         [pageOverviewText]="'Consulting is a long-term investment in your goal’s future.'"></app-overview>
     <div class="spacer-div" *ngIf="!isMobile"></div>
-    <div class="portfolio-divs">
-        <div class="spacer-div"></div>
+
+    <div class="portfolio-divs" *ngIf="!isMobile && false">
         <app-portfolio-card [imageWay]="'left'"></app-portfolio-card>
         <div class="spacer-div"></div>
         <app-portfolio-card [imageWay]="'right'"></app-portfolio-card>
         <div class="spacer-div"></div>
+        <app-portfolio-card [imageWay]="'left'"></app-portfolio-card>
+        <div class="spacer-div"></div>
+        <app-portfolio-card [imageWay]="'right'"></app-portfolio-card>
     </div>
+
+    <div class="portfolio-divs" *ngIf="isMobile">
+        <app-portfolio-card [imageWay]="'top'"></app-portfolio-card>
+        <div class="spacer-div"></div>
+        <app-portfolio-card [imageWay]="'top'"></app-portfolio-card>
+        <div class="spacer-div"></div>
+        <app-portfolio-card [imageWay]="'top'"></app-portfolio-card>
+        <div class="spacer-div"></div>
+        <app-portfolio-card [imageWay]="'top'"></app-portfolio-card>
+    </div>
+
+
+
+    <div class="portfolio-vertical-divs" *ngIf="!isMobile && true">
+        <app-portfolio-vertical-card class="item" [imageWay]="'top'"  [@fadeInFromTop3]></app-portfolio-vertical-card>
+        <app-portfolio-vertical-card class="item" [imageWay]="'top'"  [@fadeInFromTop2] ></app-portfolio-vertical-card>
+        <app-portfolio-vertical-card class="item" [imageWay]="'top'"  [@fadeInFromTop1] ></app-portfolio-vertical-card>
+        <app-portfolio-vertical-card class="item" [imageWay]="'top'"  [@fadeInFromTop3] ></app-portfolio-vertical-card>
+    </div>
+
 </div>
 
 <app-footer> </app-footer>
