--- a/src/app/pages/portfolio/portfolio.component.scss
+++ b/src/app/pages/portfolio/portfolio.component.scss
@@ -1,25 +1,38 @@
 @import '../../../variables';
 
-.portfolio::before{
+.portfolio::before {
     content: "";
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background: url(../../../assets/porfolio-bg.svg) center / cover; 
-    z-index: -1; 
-    opacity: 0.4; 
+    background: url(../../../assets/porfolio-bg.svg) center / cover;
+    z-index: -1;
+    opacity: 0.4;
 }
 
-app-portfolio-card{
+app-portfolio-card {
     cursor: pointer;
 }
 
 
-.mobile.portfolio{
-    .portfolio-divs{
+.mobile.portfolio {
+    .portfolio-divs {
         display: block;
         margin: 40px;
     }
 }
+
+.portfolio-vertical-divs {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between; 
+  }
+  
+  .item {
+    flex-basis: calc(33.33% - 10px); 
+    margin-bottom: 10px; 
+    box-sizing: border-box;
+    padding: 0px 50px 50px 0px;
+  }
