--- a/src/app/shared/heights-slider/heights-slider.component.html
+++ b/src/app/shared/heights-slider/heights-slider.component.html
@@ -1,6 +1,5 @@
-<!-- Heights Slider section  -->
-<div class="heights-slider "  [ngClass]="{'mobile':isMobile}" >
-    <!-- [@enterFromBottom] -->
+<!-- Heights Slider section  isAnimationVisible is used to show the whole component on scroll to trigger animation every time for each slide  -->
+<div class="heights-slider "  [ngClass]="{'mobile':isMobile}" *ngIf="isAnimationVisible" >
     <owl-carousel-o [options]="customOptions">
         <ng-container *ngFor="let slide of slides; let i = index;">
             <ng-template carouselSlide>
