--- a/src/app/shared/media/media.component.html
+++ b/src/app/shared/media/media.component.html
@@ -1,21 +1,21 @@
 <!-- Multimedia section Should work for both video and images media  -->
 <div class="media container" [ngClass]="{'mobile':isMobile}" >
-  <video *ngIf="mediaType == 'video'" #videoPlayer class="video-player" [controls]="startedPlay" [@fadeInFromBottom]>
+  <!-- [controls]="startedPlay" -->
+  <video *ngIf="mediaType == 'video'" #videoPlayer class="video-player"  controls autoplay  [@enterFromTop]="animationStates.enterFromTop" >
     <source src="{{mediaURL}}" type="video/mp4">
     Your browser does not support the video tag.
   </video>
 
   <!-- <img class="thumbnail" *ngIf="mediaType == 'video' && startedPlay == false" src="../../assets/testing.jpg"   alt="videothumb"> -->
-  <img class="thumbnail" *ngIf="mediaType == 'video' && startedPlay == false" src="../../../assets/figma-media.svg"
-    alt="videothumb" [@fadeInFromBottom]>
+  <!-- <img class="thumbnail" *ngIf="mediaType == 'video' && startedPlay == false" src="../../../assets/figma-media.svg"   alt="videothumb"  [@enterFromTop]="animationStates.enterFromTop" > -->
 
-
+<!-- 
   <div *ngIf="mediaType == 'video' && startedPlay == false" class="play-center-btn" (click)="playVideo();"
-    [@fadeInFromBottom]>
+  [@enterFromTop]="animationStates.enterFromTop" >
     <i class="bi bi-play-circle"></i>
-  </div>
+  </div> -->
 
-  <div *ngIf="mediaType == 'image'" class="image-div" [@fadeInFromBottom]>
+  <div *ngIf="mediaType == 'image'" class="image-div"  [@enterFromTop]="animationStates.enterFromTop" >
     <img alt="img" src="{{mediaURL}}">
   </div>
 
